# solana-burn-cli

./: CHANGELOG.md  Cargo.toml  FEATURES.md  LICENSE  README.md  README_CN.md  WINDOWS_BUILD.md  test-build.sh  test_run.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  test-windows.yml
src/: main.rs
