[package]
name = "solana-burn-cli"
version = "0.1.0"
description = "Solana burn and close ATA tui tool"
authors = ["Tallone <tallone.shi@outlook.com>"]
license = "MIT"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.46.1", features = ["full"] }
solana-client = "2.0.0"
solana-sdk = "2.0.0"
solana-program = "2.0.0"
solana-account-decoder = "2.0.0"
spl-token = "8.0.0"
spl-associated-token-account = "4.0.0"
bs58 = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
